--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "babel-jest": "^29.4.3",
     "jest": "^29.4.2",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
